# neo4j-genai-starterkit

./: Pipfile  README.md  pyproject.toml
app/: genai.py  server.py
